<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="ui.tabs.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/user_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_paint_palette"
            app:civ_border_color="@android:color/darker_gray"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_data_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_image">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextStyleData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_profile"
                    android:text="@string/owner"
                    tools:text="Name: Amanda May Bruto" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextStyleData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fb_link"
                    app:drawableLeftCompat="@drawable/ic_facebook"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="@string/fb_link" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextStyleData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats"
                    app:drawableLeftCompat="@drawable/ic_upload"
                    android:ellipsize="end"
                    tools:text="@string/stats" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            app:layout_constraintTop_toBottomOf="@id/profile_data_holder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>