<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.tabs.upload.UploadFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">


 <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:padding="10dp"
    tools:context=".ui.tabs.upload.UploadFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/upload_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/arts"
        android:scaleType="fitXY"
        android:padding="0dp"
        app:shapeAppearanceOverlay="@style/ImageShapeTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/description_wrapper"
        app:layout_constraintTop_toBottomOf="@id/upload_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"/>

    </com.google.android.material.textfield.TextInputLayout>


     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/description_wrapper"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_marginTop="10dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title_wrapper">

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/description"
             android:layout_width="match_parent"
             android:gravity="top|start"
             android:layout_height="match_parent"
             android:hint="@string/description"/>

     </com.google.android.material.textfield.TextInputLayout>

     <LinearLayout
         android:id="@+id/wrapper_date_collection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="2"
         app:layout_constraintTop_toBottomOf="@id/description_wrapper"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:baselineAligned="false">

     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/date_wrapper"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="5dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense" app:layout_constraintStart_toStartOf="parent"
         android:layout_weight="1">

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/date"
             android:layout_width="match_parent"
             android:gravity="top|start"
             android:layout_height="match_parent"
             android:hint="@string/date"/>

     </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/collection_wrapper"
             android:layout_width="0dp"
             android:layout_marginStart="5dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense" app:layout_constraintStart_toStartOf="parent"
             android:layout_weight="1">

             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/collection"
                 android:layout_width="match_parent"
                 android:gravity="top|start"
                 android:layout_height="match_parent"
                 android:hint="@string/collection"/>

         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>

     <com.google.android.material.button.MaterialButton
         android:id="@+id/upload_art"
         android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/up_art"
         app:layout_constraintTop_toBottomOf="@id/wrapper_date_collection"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>